--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -7,12 +7,15 @@
             <p>{{content}}</p>
         {{/each}}
     {{else}}
-        <P>hero not found</P>
+        <P></P>
     {{/if}}
     <h4> Add our hero to the squad!!</h4>
     <form action ="/add/new" method="Post">
-        <label for ="content">Details</label>
+        <label for ="content">Name</label>
         <input id ="content" name ="content" type="text">
+        <label for="age" >Age </label>
+        <input id="age" name ="age " type="number">
+
 
         <button type="submit" class="btn btn-primary">submit</button>
     </form>
