--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{{#block "title"}}Blog{{/block}}</title>
+    <title>{{#block "title"}}hero{{/block}}</title>
 
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
 </head>
 <body>
 <ul class="nav nav-tabs">
     <li role="presentation" class="active"><a href="#">Home</a></li>
-    <li role="presentation"><a href="/posts">See All hero</a></li>
-    <li role="presentation"><a href="/add/new">Add a New Hero</a></li>
+    <li role="presentation"><a href="/detail">See All hero</a></li>
+    <li role="presentation"><a href="/add">Add a New Hero</a></li>
 </ul>
 <div class="container">
     <!--begin main template-->
