--- a/src/main/resources/templates/success.hbs
+++ b/src/main/resources/templates/success.hbs
@@ -1,10 +1,6 @@
 {{#partial "content"}}
-
-    <h1>Congratulation !</h1>
-
-    Your Hero has been added
-
-    <a href="/">Go Back</a>
-{{/partial}}
-
-{{> layout.hbs}}
+    <h1>SUCCESS!</h1>
+    Your hero has been added.
+    <a href="/">Return to previous page</a>
+{{/partial }}
+{{>layout.hbs}}
