--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -1,24 +1,18 @@
 {{#partial "content"}}
-    <h1>Hero squad list</h1>
 
-    {{#if adds}}
-        {{#each adds}}
-            <p>Current hero:</p>
-            <p>{{content}}</p>
+    <h4>Your  Heroes</h4>
+    {{#if myhero}}
+        {{#each myhero}}
+            <p>hero:</p>
+            <p>{{name}}</p>
+            <p>{{age}}</p>
+            <p>{{power}}</p>
+            <p>{{weakness}}</p>
+
         {{/each}}
     {{else}}
-        <P></P>
+        <p>no hero found!</p>
     {{/if}}
-    <h4> Add our hero to the squad!!</h4>
-    <form action ="/add/new" method="Post">
-        <label for ="content">Name</label>
-        <input id ="content" name ="content" type="text">
-        <label for="age" >Age </label>
-        <input id="age" name ="age " type="number">
 
-
-        <button type="submit" class="btn btn-primary">submit</button>
-    </form>
 {{/partial}}
-
 {{>layout.hbs}}
