--- a/src/main/resources/templates/newadd-form.hbs
+++ b/src/main/resources/templates/newadd-form.hbs
@@ -1,24 +1,16 @@
 {{#partial "content"}}
-<h1>Hero squad list</h1>
-
-{{#if adds}}
-    {{#each adds}}
-        <p>Current hero:</p>
-        <p>{{content}}</p>
-    {{/each}}
-{{else}}
-    <P></P>
-{{/if}}
 <h4> Add our hero to the squad!!</h4>
-<form action ="/add/new" method="Post">
-    <label for ="content">Name</label>
-    <input id ="content" name ="content" type="text">
+<form action ="/post" method="post">
+    <label for ="name">Name</label>
+    <input id ="name" name ="name" type="text">
     <label for="age" >Age </label>
     <input id="age" name ="age " type="number">
-
+    <label for="powers" >Super power</label>
+    <input id="powers" name="powers" type="text">
+    <label for="Weakness" >Weakness</label>
+    <input id="weakness" name="weakness" type="text">
 
     <button type="submit" class="btn btn-primary">submit</button>
 </form>
 {{/partial}}
-
 {{>layout.hbs}}
