--- a/src/main/resources/templates/newadd-form.hbs
+++ b/src/main/resources/templates/newadd-form.hbs
@@ -1,10 +1,10 @@
 {{#partial "content"}}
 <h4> Add our hero to the squad!!</h4>
-<form action ="/post" method="post">
+<form action ="/post" method="Post">
     <label for ="name">Name</label>
     <input id ="name" name ="name" type="text">
     <label for="age" >Age </label>
-    <input id="age" name ="age " type="number">
+    <input id="age" name ="age" type="text">
     <label for="powers" >Super power</label>
     <input id="powers" name="powers" type="text">
     <label for="Weakness" >Weakness</label>
