added more test

--- a/src/main/resources/templates/add-detail.hbs
+++ b/src/main/resources/templates/add-detail.hbs
@@ -6,6 +6,9 @@
             <p>{{age}}</p>
             <p>{{power}}</p>
             <p>{{weakness}}</p>
+            <p>{{size}}</p>
+            <p>{{squad}}</p>
+            <p>{{mission}}</p>
 
         {{/each}}
     {{else}}
