added iterface for squad

--- a/src/main/resources/templates/add-detail.hbs
+++ b/src/main/resources/templates/add-detail.hbs
@@ -5,14 +5,18 @@
             <p>{{name}}</p>
             <p>{{age}}</p>
             <p>{{power}}</p>
+        {{/each}}
+    {{else}}
+        <p>no hero found!</p>
+    {{/if}}
+    {{#if squad}}
+        {{#each squad}}
+            <p>squad</p>
             <p>{{weakness}}</p>
             <p>{{size}}</p>
             <p>{{squad}}</p>
             <p>{{mission}}</p>
-
         {{/each}}
-    {{else}}
-        <p>no hero found!</p>
     {{/if}}
 {{/partial}}
 {{> layout.hbs}}
