--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -2,26 +2,25 @@
 <html>
 <head>
     <title>{{#block "title"}}hero{{/block}}</title>
-
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+    <link rel="stylesheet" href='/app.css'>
 </head>
 <body>
+
 <ul class="nav nav-tabs">
     <li role="presentation" class="active"><a href="#">Home</a></li>
     <li role="presentation"><a href="/detail">See All hero</a></li>
     <li role="presentation"><a href="/add">Add a New Hero</a></li>
 </ul>
-<div class="container">
+<div class="container-fluid">
     <!--begin main template-->
     <div class="page-header">
         <h1>Welcome to Hero squad </h1>
     </div>
 
-    <div class="col-md-12">
         {{#block "content"}}
         {{/block}}
 
-    </div>
 </div>
 <!--end main template-->
 {{#block "footer"}}
