--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -24,6 +24,11 @@
 </div>
 <!--end main template-->
 {{#block "footer"}}
+    <footer class="page-footer ">
+        <div class="footer-copyright text-center py-3">© 2020 Copyright:
+            <a href="https://hero.com/"> hero-squad.com</a>
+        </div>
+    </footer>
     </body>
     </html>
 {{/block}}
