--- a/src/main/resources/templates/success.hbs
+++ b/src/main/resources/templates/success.hbs
@@ -1,6 +1,6 @@
 {{#partial "content"}}
     <h1>SUCCESS!</h1>
     Your hero has been added.
-    <a href="/">Return to previous page</a>
+    <a href="/">Back to home page</a>
 {{/partial }}
 {{>layout.hbs}}
