added few images to style

--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -1,5 +1,8 @@
 {{#partial "content"}}
-    <img src="https://bit.ly/3f88mkP">
+    <img src="https://bit.ly/2WhqFvk">
+    <img src="https://bit.ly/2zO20af">
+    <img src="https://bit.ly/3d5uD0V">
+
 
 {{/partial}}
 {{>layout.hbs}}
