--- a/src/main/resources/templates/success.hbs
+++ b/src/main/resources/templates/success.hbs
@@ -2,5 +2,8 @@
     <h1>SUCCESS!</h1>
     Your hero has been added.
     <a href="/">Back to home page</a>
+    <br>
+    <a href="/add">Add  hero and squad</a>
+
 {{/partial }}
 {{>layout.hbs}}
